--- a/style.css
+++ b/style.css
@@ -2,6 +2,29 @@
     border: 1px solid red;
 } */
 
+form{
+    text-align: center;
+    margin: 20px;
+    font-weight: bold;
+}
+
+button{
+    padding: 10px;
+    background-color: cadetblue;
+}
+
 table{
     border: 1px solid black;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+#containerDiv{
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
